# Examples

./: .gitignore  LICENSE.md  README.md  dasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdwdasdasdwdasdwdasdwdasdwdasdgjashdjwhdjdopasjdfkihwjldhkjashdkjhjwkdhas
AdventOfCode2018/6thDay/: a.out  challenge.txt  main.cpp
C#/: App1.rar  Guess random number.rar  Login thing 1st try.rar  TextAdventure1.rar
C#/10 PRINT/: 10 PRINT.sln
C#/2 Aspects Of Life/: ConsoleApp2.sln
C#/2048/: 2048.sln
C#/App2/: App2.sln
C#/CPP to ASM/: CPP to ASM.sln  target.c
C#/ConsoleBounce/: ConsoleBounce.sln
C#/Conways Game Of Life/: Conways Game Of Life.sln
C#/Count to 10/: ConsoleApp3.sln
C#/Countdown/: Countdown.sln
C#/Countdown Numbers Game/: Countdown Numbers Game.sln
C#/DVD Opener/: DVD Opener.sln
C#/Evaluate mathematical expressions/: Evaluate mathematical expressions.sln
C#/Factorial/: Factorial.sln
C#/Feet To Inches/: Feet To Inches.csproj  Feet To Inches.sln  Program.cs
C#/FileLister/: FileLister.sln
C#/GoogleTTSFor.Net-master/: CODE_OF_CONDUCT.md  README.md
C#/Guess random number/: Guess random number.sln
C#/Heads or tails/: Heads or tails.sln
C#/How Long/: How Long.sln
C#/Hypotenuse/: Hypotenuse.sln
C#/Just Testing/: Just Testing.sln
C#/Letter By Letter/: Letter By Letter.sln
C#/LogIn/: LogIn.sln
C#/MOCK/: MOCK.sln
C#/Networking Tools/: Networking Tools.sln
C#/OpenTK/: OpenTK.sln
C#/Owl Project/: Owl Project.sln
C#/Pi to decimal/: Pi to decimal.sln
C#/Prime/: Prime.sln
C#/QuickSort/: QuickSort.sln
C#/RainbowPrint/: RainbowPrint.sln
C#/RandomNumber/: RandomNumber.sln
C#/Reminders/: Reminders.sln
C#/Rocket launch game/: Rocket launch game.sln
C#/Roman Numeral Converter/: Roman Numeral Converter.sln
C#/SimpleRocketGame-master/: SimpleRocketGame.sln
C#/SimpleSort/: SimpleSort.sln
C#/Speech to Text/: Speech to Text.sln
C#/String Reversal/: String Reversal.sln
C#/TTS/: TTS.sln
C#/TextAdventure1/: Template.txt  TextAdventure1.sln
C#/Trigonometry/: Trigonometry.sln
C#/TypeRacer cheat/: TypeRacer cheat.sln
C#/Universal Science Solver and Resolver/: universal-science-solver.sln
C#/WinFormsCalc/: Windows Form Calculator.sln
C#/api/: README.md  Speech.sln
C#/net tests/: net tests.sln
C#/same py/: same py.sln
C#/this dot/: this dot.sln
C++/: todo.txt  todo.txt.save
C++/Arduino/: Joystick_Mouse.rar
C++/Doom Fire Algorithm/: .main.cpp.swp  bogi.cpp  main.cpp
C++/FirstProgram/: main  main.cpp  makefile
C++/Floyd-Steinberg diffusion/: a.out  fixed_floyd_steinberg.cpp  main.cpp
C++/Gaussian blur/: main.cpp
C++/Julia explorer/: main.cpp
C++/Learning/: a.out
C++/Learning c++/: Learning c++.sln
C++/Mandelbrot explorer/: main.cpp  olcPixelGameEngine.h
C++/Maze/: main.cpp  olcPixelGameEngine.h
C++/Navier Stokes Fluid Sim/: CMakeLists.txt  main.cpp  output.execd
C++/Pixel-Engine/Rays/: CMakeLists.txt  main.cpp  math.h  olcPixelGameEngine.h  rect.cpp  rect.h
C++/Simple pendulum/: main.cpp  maths.h  rect.cpp  rect.h
C++/Soph/: README.md  classes.h  soapi.cpp
C++/Verlet Cloth/: CMakeLists.txt  main.cpp  olcPixelGameEngine.h  output
C++/brainfuckemulator/: a.out  fml.bf  main.cpp
C++/hashtable/: a.out  main.cpp
C++/mreeves-ctf#1/: a.out  main.cpp  recovered-excecutable  yes.txt
C++/practicing-c++/: practicing-c++.sln
C++/snake-movement-mechanic/: main.cpp
C++/vending-machine/: vending-machine.sln
Crystal/First-Program/: main.cr  shard.yml
Java/.metadata/: version.ini
Java/First Java Thing/: .project
Java/First Program/: build.xml
Java/TestingJava/: pom.xml
JavaScript/: javascript safe.rar
JavaScript/Game Of Life/: index.html  index.js
JavaScript/HitlerSort/: index.js
JavaScript/Levenshtein_distance/: index.js  package.json  test.js
JavaScript/MinecraftFaceGetter/: index.js  names.txt  package-lock.json  package.json
JavaScript/Part2-CTF-JS/: challenge.html  index.html  text.txt
JavaScript/SelfBot/: index.js  package-lock.json  package.json
JavaScript/Simple Movie Server/: .gitignore  index.js  package-lock.json  package.json
JavaScript/SimpleRESTapi/: package-lock.json  package.json
JavaScript/SimpleWebServer/: file.js
JavaScript/Snake/: game.js
JavaScript/Snetris/: index.html  index.js  main.cpp  style.css
JavaScript/TestingElectron/: package-lock.json
JavaScript/TestingNode/: js.js
JavaScript/Tetris-Snake/: index.html  index.js  style.css
JavaScript/Weather Station/: index.js  package-lock.json  package.json
JavaScript/adruino-temp-sensor/: index.js  package-lock.json  package.json
JavaScript/calculator/: index.html  index.js  style.css
JavaScript/dino-game/: cacti.js  colision.js  enemys.js  game.js  index.html  package.json  player.js  style.css  world.js
JavaScript/javascript safe/: index.html
JavaScript/negative-spacing/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
JavaScript/node-dtdns-updater/: .eslintrc.json
JavaScript/pureimageTest/: index.js  package-lock.json  package.json
JavaScript/search-tree/: index.js  (+1 more)
NodeJS/: Snake.rar
OpenGL/cube/: CMakeLists.txt
OpenGL/cube/CMakeModules/: FindSDL2_image.cmake
OpenGL/cube/resources/shaders/: simple.frag  simple.vert
OpenGL/cube/shaders/: simple.frag  simple.vert
OpenGL/cube/src/: main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
Python/: Brute Force Helo, World!.py  Quadratics.py  login_cod.py
SQF (arma)/: info.txt
(+1332 files in other folders)
